<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ds_page_navigator_previous_button_label">Previous</string>
    <string name="ds_page_navigator_next_button_label">Next</string>
    <string name="ds_page_navigator_page_index_text_default" />
    <string name="ds_page_navigator_page_index_text">Page %1$s of %2$s</string>

    <string name="ds_error_feedback_retry_button_label">Try Again</string>

    <string name="ds_location_card_type_label">"Type: "</string>
    <string name="ds_location_card_dimension_label">"Dimension: "</string>

    <string name="ds_character_card_name_label">"Name: "</string>
    <string name="ds_character_card_status_label">"Status: "</string>
    <string name="ds_character_card_species_label">"Species: "</string>
    <string name="ds_character_card_type_label">"Type: "</string>
    <string name="ds_character_card_gender_label">"Gender: "</string>
    <string name="ds_character_card_origin_label">"From: "</string>
    <string name="ds_character_card_location_label">"Last Known Location: "</string>
    <string name="ds_character_card_avatar_image_desc">Avatar image</string>
    <string name="ds_character_card_location_placeholder"> "    - %1$s"</string>
</resources>